apps/forgejo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  labels:
    app: forgejo
spec:
  selector:
    matchLabels:
      app: forgejo
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:15
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: forgejo-storage
              mountPath: /data
      volumes:
        - name: forgejo-storage
          persistentVolumeClaim:
            claimName: forgejo-data-pvc
