apps/forgejo/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-http-route
spec:
  parentRefs:
    - name: default
      namespace: default
      sectionName: https
  hostnames:
    - "forgejo.home.arpa"
  rules:
    - backendRefs:
        - name: forgejo-svc
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
